<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="4px">
    
	<ListView 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1" android:id="@+id/ListViewPlayingSongs">
	</ListView>
		
	<LinearLayout 
		android:id="@+id/LinearLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" 
		android:orientation="horizontal">
				
		<Button 
			android:id="@+id/ButtonStart"
			android:text="@string/ButtonStartText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
			
		<Button 
			android:id="@+id/ButtonPause"
			android:text="@string/ButtonPauseText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="center_horizontal"/>
			
		<Button 
			android:id="@+id/ButtonStop"
			android:text="@string/ButtonStopText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
